Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignObjectUndefinedField.quorum
class Main
    Object obj
    action Main
        obj = cast(Object, undefined)
        if obj = undefined
            output "passed"
        end
    end
end