Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignNumberUndefined.quorum
class Main
    action Main
        number num
        num = cast(number, undefined)
    end
end
